<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="classInfo"
            type="hahow.recruit.hahowdondon.data.ClassInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemHomeConstrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/itemClassImageCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="14dp"
            android:backgroundTint="@color/gray_cccccc"
            app:cardCornerRadius="16dp"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/itemClassImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{classInfo.coverImageUrl}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/itemClassDueTime"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:enabled="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/proposalDueTime"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:icon="@drawable/svg_timeicon"
                    app:iconPadding="10dp"
                    app:iconSize="18dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/proposalDueTimeTools" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/itemClassStatus"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textColor="@color/new_white"
            android:textSize="14sp"
            app:backgroundTint="@color/gray_cccccc"
            app:cornerRadius="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemClassImageCardView"
            tools:text="@string/statusIncubating" />

        <TextView
            android:id="@+id/itemClassTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            android:ellipsize="end"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:maxLines="2"
            android:text="@{classInfo.title}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemClassStatus"
            tools:text="@string/classInfoTitle" />

        <TextView
            android:id="@+id/itemClassSuccessCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/itemClassStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemClassStatus"
            tools:text="@string/ReachSuccessCriteriaTools" />

        <ProgressBar
            android:id="@+id/itemClassProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/itemClassStatus"
            app:layout_constraintEnd_toStartOf="@+id/itemClassSuccessCriteria"
            app:layout_constraintStart_toEndOf="@+id/itemClassStatus"
            app:layout_constraintTop_toTopOf="@+id/itemClassStatus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>