<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="classInfo"
            type="hahow.recruit.hahowdondon.data.ClassInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbarName"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/about_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/new_topic"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{classInfo.title}"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_underline"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/classInfoTitle"/>

        <TextView
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:textSize="20sp"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/confirm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
